[package]
name = "pontusx-paratime"
version = "0.0.2-testnet"
authors = ["deltaDAO <contact@delta-dao.com>"]
edition = "2021"
license = "Apache-2.0"

[package.metadata.orc.release]
runtime-id = "000000000000000000000000000000000000000000000000b2406b4af4e630fe"

[package.metadata.orc.test]
runtime-id = "00000000000000000000000000000000000000000000000004a6f9071c007069"

[package.metadata.orc.devnet]
runtime-id = "0000000000000000000000000000000000000000000000004febe52eb412b421"

[package.metadata.fortanix-sgx]
heap-size = 536870912 # 512 MiB
stack-size = 2097152
threads = 26
debug = false

[dependencies]
keymanager = { package = "pontusx-keymanager", git = "https://github.com/oasisprotocol/pontusx-keymanager", tag = "v0.0.1-testnet" }

# SDK.
module-evm = { git = "https://github.com/oasisprotocol/oasis-sdk", tag = "runtime-sdk/v0.8.6", package = "oasis-runtime-sdk-evm" }
oasis-runtime-sdk = { git = "https://github.com/oasisprotocol/oasis-sdk", tag = "runtime-sdk/v0.8.6" }

# Third party.
hex = "~0.4"
once_cell = "1.8.0"
const-str = { version = "0.5.7", features = ["std"] }

[profile.release]
codegen-units = 1
lto = "thin"
